--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@
     
     --clr-light:  #e6d4d4;
     --clr-dark:	  #000000;
-	--clr-accent: #a16363;
-	--clr-medium: #fdfdfd;
-	--clr-hover:  #f39f9f;
-	--clr-active: #e69d9d;
+  	--clr-accent: #a16363;
+  	--clr-medium: #fdfdfd;
+	  --clr-hover:  #f39f9f;
+  	--clr-active: #e69d9d;
     --clr-footer: #f8cfcf;
     
     --fs-h1: 3rem;
@@ -221,7 +221,83 @@ a:active {
 	opacity: 0.25;
 }
 
-.service {
+/*   */
+
+.service{
+  display: inline-block;
+  width: 33%;
+}
+
+/* end grid fallback */
+
+/* #### START OF Project List styling #### */
+@supports (display: grid) {
+  .services {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin: 20px;
+  }
+
+  .service {
+    padding: 20px;
+    width: auto;
+    min-height: auto;
+    margin: 0;
+    overflow: hidden;
+  }
+
+  .website_image {
+    max-width: 100%;
+    border-radius: 0%;
+    margin-top: 10px;
+  }
+}
+
+/* END OF Project List styling  */
+
+/*  Responsive Design styling  */
+
+@media all and (max-width: 750px) {
+
+  /* shared code */
+  .services {
+    grid-gap: 10px;
+  }
+
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .services {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+
+@media all and (min-width: 500px) and (max-width: 750px) {
+  .services {
+    -ms-grid-columns: 1fr 10px 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+
+/*   */
+
+/* .service {
 	background: var(--clr-dark);
 	color: var(--clr-medium);
 	display: inline-block;
@@ -276,7 +352,7 @@ a:active {
 		font-size: 22px;
 	}
 }
-
+ */
   /* About Me */
 
 .about-me {
@@ -408,6 +484,7 @@ button:hover {
 	margin: 0;
 	padding: 0;
 }
+
 
 @media(min-width: 700px) {
 	.flex-container {
