--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section{
     padding: 0 80px;
     margin: auto;
 }
-.about, .services, .skills, .teams, .contact, footer{
+.about, .services, .skills, .project, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
@@ -258,16 +258,16 @@ section .title::after{
 }
 
 /* services section styling */
-.services, .teams{
+.services, .project{
     color:#fff;
     background: #111;
 }
 .services .title::before,
-.teams .title::before{
+.project .title::before{
     background: #fff;
 }
 .services .title::after,
-.teams .title::after{
+.project .title::after{
     background: #111;
     content: "what i acquired";
 }
@@ -378,11 +378,11 @@ section .title::after{
     width: 40%;
 }
 
-/* teams section styling */
-.teams .title::after{
+/* project section styling */
+.project .title::after{
     content: "my work";
 }
-.teams .carousel .card{
+.project .carousel .card{
     background: #222;
     border-radius: 6px;
     padding: 25px 35px;
@@ -390,10 +390,10 @@ section .title::after{
     overflow: hidden;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover{
+.project .carousel .card:hover{
     background: crimson;
 }
-.teams .carousel .card .box{
+.project .carousel .card .box{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -401,28 +401,28 @@ section .title::after{
     transition: all 0.3s ease;
     overflow: hidden;
 }
-.teams .carousel .card:hover .box{
+.project .carousel .card:hover .box{
     transform: scale(1.05);
 }
-.teams .carousel .card .text{
+.project .carousel .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
-.teams .carousel .card img{
+.project .carousel .card img{
     height: 200px;
     width: 300px;
     object-fit: cover;
     border: 3px solid;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover img{
+.project .carousel .card:hover img{
     border-color: #fff;
 }
-.teams .carousel .card:hover a{
+.project .carousel .card:hover a{
     color: #fff;
 }
-.teams .carousel .card .picture{
+.project .carousel .card .picture{
   text-decoration: none;
   color: white;
 }
